--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -20,8 +20,8 @@
 						<div class="post-content">
 							{{content}}
 						</div>
-						<h2>Recent Commits</h2>
-						<div class="commits"> </div>
+						<h2>Activity Feed</h2>
+						<div class="feed"> </div>
 						<h2>Our Repositories</h2>
 						<div class="repos"> </div>
 					</article>
