--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -2030,16 +2030,15 @@ p {
 	}
 }
 
-.commits {
-	border: 1px solid #eaeaea;
-	.commit {
+.feed {
+	.activity {
 		width:100%;
-
-	  padding: 10px;
+	  padding: 20px;
 		transition: all .2s ease-out;
 		position: relative;
 		overflow: hidden;
-		border-bottom: 1px solid #eaeaea;
+		margin-bottom: 15px;
+    border: 1px solid #eaeaea;
 		text-decoration: none;
 
 		&:hover {
@@ -2048,7 +2047,7 @@ p {
 				cursor: pointer;
 				text-decoration: none;
 
-				h4, p, span {
+				h3, h4, p, span, li, ul {
 					color:white !important;
 					text-decoration: none;
 				}
@@ -2062,11 +2061,54 @@ p {
 			margin-right: 5px;
 		}
 
+		.author {
+			padding: 20px 0 10px;
+				display: block;
+				font-size: 16px;
+				width: fit-content;
+				border-top: 1px solid #00ada7;
+				width: 100%;
+
+			span {
+				font-size: 16px;
+			}
+		}
+
 		h4 {
-			font-size: 16px;
-			font-weight: 500;
+			font-size: 23px;
+			font-weight: 600;
 			display: inline;
-			margin-left: 5px;
+			margin: auto 0;
+    	height: fit-content;
+		}
+
+		h3 {
+			color:@theme-color;
+			font-weight: 700;
+			display: inline;
+			font-size: 3em;
+    	margin: auto 20px auto 0;
+		}
+
+		.intro {
+			display: flex;
+			justify-content: normal;
+			/* border-bottom: 1px solid #00ada7; */
+			padding-bottom: 10px;
+			width: fit-content;
+		}
+
+		ul {
+			list-style: none;
+			padding: 10px 20px;
+			font-style: italic;
+			max-height: 177px;
+			display: flex;
+			flex-direction: column;
+			flex-wrap: wrap;
+			margin: 0 auto 0 auto;
+			align-content: center;
+			width: auto;
 		}
 
 		p {
@@ -2075,11 +2117,20 @@ p {
 			margin: 10px 0 0;
 		}
 
+		li {
+			font-size: 12px;
+			color: #909090;
+			margin: 0 20px;
+			width: fit-content;
+		}
+
 		span {
 			display: inline;
 			color:@text-color;
-			font-size: 12px;
+			font-size: 14px;
 			font-style: italic;
+			margin: auto 20px auto 0;
+    	height: fit-content;
 		}
 
 		.time {
