--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -463,7 +463,7 @@ pre {
 				h1 {
 					font-size: 3em;
 					font-weight: 700;
-					padding: 20px 0;
+					padding: 10px 0 0;
 				}
 			}
 		}
@@ -1453,7 +1453,7 @@ p {
 
 	.post-head {
 		@media(max-width: 600px) {
-			padding: 10px 0 !important;
+      padding: 10px 0 0 !important;
 		}
 	}
 }
@@ -2032,24 +2032,26 @@ p {
 
 .feed {
 	.activity {
-		width:100%;
-	  padding: 20px;
+	  margin: 20px;
 		transition: all .2s ease-out;
 		position: relative;
 		overflow: hidden;
-		margin-bottom: 15px;
-    border: 1px solid #eaeaea;
 		text-decoration: none;
 
 		&:hover {
 				background-color: @theme-color;
 				color: white;
 				cursor: pointer;
-				text-decoration: none;
+				text-decoration: none !important;
 
-				h3, h4, p, span, li, ul {
+				.intro,
+				.body {
+					background-color: @theme-color;
+				}
+
+				& * {
 					color:white !important;
-					text-decoration: none;
+					text-decoration: none !important;
 				}
 			}
 
@@ -2062,11 +2064,10 @@ p {
 		}
 
 		.author {
-			padding: 20px 0 10px;
 				display: block;
 				font-size: 16px;
 				width: fit-content;
-				border-top: 1px solid #00ada7;
+				/*border-top: 1px solid #00ada7;*/
 				width: 100%;
 
 			span {
@@ -2074,40 +2075,65 @@ p {
 			}
 		}
 
-		h4 {
-			font-size: 23px;
-			font-weight: 600;
-			display: inline;
-			margin: auto 0;
-    	height: fit-content;
+		.summary {
+			padding: 10px 0;
+			h4 {
+				font-size: 23px;
+				font-weight: 600;
+				display: block;
+				margin: auto 0;
+	    	height: fit-content;
+				line-height: 1;
+			}
+
+			span {
+				display: block;
+				color:@text-color;
+				font-size: 14px;
+				font-style: italic;
+				margin: auto 20px auto 0;
+	    	height: fit-content;
+				line-height: 1;
+				margin-bottom: 3px;
+			}
+
+		}
+
+		.body {
+			padding: 20px 30px;
+			background: #f9f9f9;
+
+			.author {
+				color: @text-color;
+				font-size: 15px;
+
+			}
 		}
 
 		h3 {
 			color:@theme-color;
 			font-weight: 700;
 			display: inline;
-			font-size: 3em;
+			font-size: 3.5em;
     	margin: auto 20px auto 0;
 		}
 
 		.intro {
 			display: flex;
 			justify-content: normal;
-			/* border-bottom: 1px solid #00ada7; */
-			padding-bottom: 10px;
-			width: fit-content;
+			padding: 10px 30px;
+			background: #f3f3f3;
 		}
 
 		ul {
 			list-style: none;
-			padding: 10px 20px;
+			padding: 10px 0;
 			font-style: italic;
 			max-height: 177px;
 			display: flex;
 			flex-direction: column;
 			flex-wrap: wrap;
 			margin: 0 auto 0 auto;
-			align-content: center;
 			width: auto;
 		}
 
@@ -2120,17 +2146,12 @@ p {
 		li {
 			font-size: 12px;
 			color: #909090;
-			margin: 0 20px;
 			width: fit-content;
 		}
 
-		span {
-			display: inline;
-			color:@text-color;
-			font-size: 14px;
-			font-style: italic;
-			margin: auto 20px auto 0;
-    	height: fit-content;
+		.date {
+			margin-right: 10px;
+	    color: #5d5d5d;
 		}
 
 		.time {
